3.0.180.alpha.2 - 14th February 2024
- Updated ScrollFrameTemplate for Media.
- Updated 'Enhance quest log' ('Interface') code.

3.0.179 - 14th February 2024
- For 'Enhanced quest log' ('Interface'), fixed an issue with showing quest level suffixes for non-English locales.
- Added flight times.

3.0.178 - 7th February 2024
- For 'Enhance minimap' ('Interface'), updated tooltip positioning logic.  Added Wowhead Looter button.
- For 'Recent chat window' ('Chat'), scroll speed is now based on font size.
- Added flight times.

3.0.177 - 3rd February 2024
- The 'Enhance minimap' ('Interface') option is now able to display custom buttons correctly if Leatrix Plus is aware of them.
- For 'Automate quests' ('Automation'), quests from Valadar Starsong and Fariel Starsong (Moonglade) will no longer be automated.
- Added flight times.

3.0.176 - 1st February 2024
- Updated translations.

3.0.175 - 31st January 2024
- Added flight times.

3.0.174 - 24th January 2024
- Fixed ScrollFrameTemplate editbox widths.
- Added flight times.

3.0.173 - 17th January 2024
- For 'Enhance minimap' ('Interface'), the minimum minimap scale is now 50% (was 100%).
- For 'Hide chat buttons' ('Chat'), fixed an issue which caused a black border around chat tabs.
- Updated ScrollFrameTemplate.
- Added flight times.
- Repackage following CurseForge backend issues.

3.0.172 - 10th January 2024
- Added a new command '/ltp quest wipe' which will clear the quest log.
- Added flight times.

3.0.171 - 3rd January 2024
- Updated 'Automate gossip' ('Automation') for soft targeting.
- For 'Enhance quest log', fixed a situational issue with quest prefix translations.
- For the minimap button, holding CTRL and SHIFT will now toggle windowed mode.  Holding CTRL and ALT will toggle the Zygor addon (if installed).
- Fixed an issue with the Zygor addon toggle.
- Added flight times.

3.0.170 - 27th December 2023
- Updated 'Automate quests' ('Automation') for soft targeting.
- Added flight times.
